# atm-core

./: .atm.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_READINESS.md  architecture.md  file-migration-plan.md  migration-map.md  read-behavior.md  worktree-tracking.md
.claude/agents/: arch-qa.md  flaky-test-qa.md  publisher.md  quality-mgr.md  registry.yaml  req-qa.md  scrum-master.md
.claude/skills/codex-orchestration/: SKILL.md  dev-template.xml.j2  qa-template.xml.j2  review-template.xml.j2
.claude/skills/phase-orchestration/: SKILL.md
.claude/skills/quality-management-gh/: SKILL.md
.claude/skills/restore-team-communications/: SKILL.md
.claude/skills/team-lead/: SKILL.md  backup-and-restore-team.md
.github/workflows/: ci.yml  release.yml
.sc-compose/logs/: sc-compose.log.jsonl
.winget/: randlee.agent-team-mail.yaml
crates/atm/: Cargo.toml
crates/atm-core/: Cargo.toml
crates/atm-core/src/: address.rs  error.rs  error_codes.rs  home.rs  lib.rs  model_registry.rs  observability.rs  persistence.rs  process.rs  team_admin.rs  text.rs  types.rs  workflow.rs
crates/atm-core/src/ack/: mod.rs
crates/atm-core/src/clear/: mod.rs
crates/atm-core/src/config/: aliases.rs  bridge.rs  discovery.rs  mod.rs  types.rs
crates/atm-core/src/dispatcher/: mod.rs
crates/atm-core/src/doctor/: health.rs  mod.rs  report.rs
crates/atm-core/src/identity/: hook.rs  mod.rs
crates/atm-core/src/inbox_export/: mod.rs
crates/atm-core/src/inbox_ingress/: mod.rs
crates/atm-core/src/log/: filters.rs  mod.rs
crates/atm-core/src/mail_store/: mod.rs
crates/atm-core/src/mailbox/: atomic.rs  hash.rs  lock.rs  mod.rs  source.rs  store.rs  surface.rs
crates/atm-core/src/read/: filters.rs  mod.rs  projection.rs  seen_state.rs  state.rs  wait.rs
crates/atm-core/src/roster_store/: mod.rs
crates/atm-core/src/schema/: agent_member.rs  inbox_message.rs  mod.rs  permissions.rs  settings.rs  team_config.rs
crates/atm-core/src/send/: alert_state.rs  file_policy.rs  hook.rs  input.rs  mod.rs  summary.rs
crates/atm-core/src/store/: mod.rs
crates/atm-core/src/task_store/: mod.rs
crates/atm-core/src/team_admin/: restore.rs
crates/atm-core/src/team_ingress/: mod.rs
crates/atm-core/src/watcher_reconcile/: mod.rs
crates/atm-core/tests/: mailbox_locking.rs
crates/atm-daemon/: Cargo.toml
crates/atm-daemon/src/: client.rs  lib.rs  main.rs  runtime_observability.rs
crates/atm-rusqlite/: Cargo.toml
crates/atm-rusqlite/src/: ack.rs  lib.rs  mail.rs  roster.rs  send.rs  task.rs  tests.rs
crates/atm/src/: main.rs  observability.rs  output.rs  sc_observability_adapter.rs
crates/atm/src/commands/: ack.rs  clear.rs  doctor.rs  log.rs  members.rs  mod.rs  read.rs  send.rs  teams.rs
crates/atm/tests/: ack.rs  clear.rs  doctor.rs  log.rs  read.rs  send.rs  team_recovery.rs  version_alignment.rs
crates/atm/tests/helpers/: mod.rs
docs/: WINGET_SETUP.md  architecture.md  atm-error-codes.md  atm-message-schema.md  claude-code-message-schema.md  code-review-cr001-analysis.md  cross-platform-guidelines.md  documentation-guidelines.md  file-migration-plan.md  idle-notification-dedup-plan.md  legacy-atm-message-schema.md  lock-release-gate.md  migration-map.md  obs-gap-analysis.md  persisted-data-repair.md  phase-pg-planning.md  plan-pP-lock-atm-bugs.md  plan-phase-Q.md  project-plan.md  read-behavior.md  release-inventory-schema.json  requirements.md  sc-observability-schema.md  team-member-state.md  team-protocol.md
docs/adr/: issue-98-hook-skip-noise-fix-plan.md
docs/archive/: file-migration-plan.md  migration-map.md  obs-gap-analysis.md
docs/atm/: architecture.md  requirements.md
docs/atm-core/: architecture.md  requirements.md
docs/atm-core/design/: dedup-metadata-schema.md  live-observability-validation.md  live-shared-inbox-validation.md  sc-obs-1.0-integration.md  sc-observability-integration.md
docs/atm-core/dev/: pre-publish-deps.md
docs/atm-core/modules/: ack.md  clear.md  config.md  doctor.md  log.md  mailbox.md  observability.md  read.md  send.md  team_admin.md  workflow.md
docs/atm-daemon/: architecture.md  requirements.md
docs/atm-graft/: architecture.md  requirements.md
docs/atm-rusqlite/: architecture.md  requirements.md
docs/atm/commands/: ack.md  clear.md  doctor.md  log.md  members.md  read.md  send.md  teams.md
release/: publish-artifacts.toml
scripts/: atm-nudge.py  atm-nudge.sh  release_artifacts.py  test_atm_nudge.py
tools/schema_models/: __init__.py  atm_message_schema.py  claude_code_message_schema.py  legacy_atm_message_schema.py  test_schema_models.py
