[package]
name = "atm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
