[package]
name = "agent-team-mail-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for ATM store, transport, and workflow boundaries."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/agent-team-mail-core"
readme = "../../README.md"
keywords = ["agent", "mail", "workflow", "teams", "local"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "atm_core"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
ulid = { version = "1.2.1", features = ["serde"] }
uuid.workspace = true
fs2 = "0.4"
same-file = "1"

[dev-dependencies]
atm-rusqlite = { path = "../atm-rusqlite", version = "1.1.2" }
serial_test = "3"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
