[package]
name = "atm-rusqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite store implementation for ATM Phase Q boundaries."
repository.workspace = true
homepage.workspace = true

[lib]
name = "atm_rusqlite"

[dependencies]
atm-core = { package = "agent-team-mail-core", path = "../atm-core", version = "1.1.2" }
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
