[package]
name = "atm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
atm-core = { path = "../atm-core" }
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
