[package]
name = "atm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
test-util = []

[dependencies]
atm-core = { path = "../atm-core" }
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
sc-observability = { version = "1.0.0", features = ["fault-injection"] }
sc-observability-types = "1.0.0"
serde_json.workspace = true
time = "0.3"
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
