[package]
name = "agent-team-mail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Daemon-free CLI for local agent team mail workflows."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/agent-team-mail"
readme = "../../README.md"
keywords = ["agent", "mail", "cli", "teams", "workflow"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["src/bin/atm_post_send_hook_fixture.rs"]

[[bin]]
name = "atm"
path = "src/main.rs"

[dependencies]
atm-core = { package = "agent-team-mail-core", path = "../atm-core", version = "1.1.1" }
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
sc-observability = "1.0.0"
sc-observability-types = "1.0.0"
serde_json.workspace = true
time = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
sc-observability = { version = "1.0.0", features = ["fault-injection"] }
serial_test = "3"
tempfile = "3"
